--- a/languages/en.json
+++ b/languages/en.json
@@ -6,7 +6,7 @@
     "nav_contact": "Contact",
     "home_greeting": "Hi, It's <span>Emmanuel</span>",
     "home_intro": "I'm a ",
-    "animated_text_1": "Systems Engineering Student",
+    "animated_text_1": "Systems Engineering",
     "animated_text_2": "Frontend Designer",
     "animated_text_3": "Designer",
     "animated_text_4": "Web Designer",
