--- a/languages/en.json
+++ b/languages/en.json
@@ -21,7 +21,7 @@
     "education_1_desc": "Liceo Sinaí High School Peréz Zeledón, San Isidro del General. Completion of the International Baccalaureate Diploma Program.",
     "education_2_title": "Computer Application Programming",
     "education_2_desc": "Universidad Nacional de Costa Rica Heredia, Costa Rica. Completion of the Diploma in computer applications programming.",
-    "education_3_date": "Actually",
+    "education_3_date": "Recently",
     "education_3_title": "Systems Engineering",
     "education_3_desc": "Universidad Nacional de Costa Rica Heredia, Costa Rica. I have carried out different projects of courses of my career that help to improve the management of different software and create solutions to certain problems that arise.",
     "projects_title": "Projects",
